added some captions

--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -10,6 +10,8 @@ featured: true
 hidden: true
 ---
 
+Inktober took up most of my artistic energy for the past couple months, but here's the other digital stuff I've been working on.
+
 ![caelestiventus](/assets/images/posts/caelestiventus.png)
 
 *Caelestiventus* (meaning "heavenly wind"--what a great name for a prehistoric beast) was a dimorphodontid pterosaur from Late Triassic Utah, which was then a desert environment.  It was large for an early pterosaur and probably specialized for its extreme environment, indicating potential higher diversity among this group than we'd previously thought.  I was inspired by the way vampire bats move on the ground (check out the documentary series "Night On Earth" for incredible footage of vampire bats preying on fur seal pups and all kinds of other cool stuff)--their wings fold up and you can't even tell they could fly until they do--and wanted to see if I could figure out how these weird, membrany animals might look in various poses.  I'm not sure I'm happy with how they turned out, but I learned a lot while doing it at least.  I think this is a brother-sister subadult pair, the male having the large chin crest.
@@ -52,4 +54,4 @@ Anyway, now I'm officially done with these.  I also made this one into a [colori
 
 ![muttaburra](/assets/images/posts/muttaburra.png)
 
-I was watching the original *Walking With Dinosaurs* (yep, I haven't seen it til now! It holds up super well, would recommend) and when the British narrator said "*Muttaburrasaurus*" my fiancé said, "Nutter Butter Saurus?" and this was born.
+I was watching the original *Walking With Dinosaurs* (yep, I haven't seen it til now! It holds up super well, would recommend) and when the British narrator said "*Muttaburrasaurus*" my fiancé said, "Nutter Butter Saurus?" and this was born.  Have another Nutter Butter peanut butter *Muttaburrasaurus*!
