--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -55,3 +55,19 @@ Anyway, now I'm officially done with these.  I also made this one into a [colori
 ![muttaburra](/assets/images/posts/muttaburra.png)
 
 I was watching the original *Walking With Dinosaurs* (yep, I haven't seen it til now! It holds up super well, would recommend) and when the British narrator said "*Muttaburrasaurus*" my fiancé said, "Nutter Butter Saurus?" and this was born.  Have another Nutter Butter peanut butter *Muttaburrasaurus*!
+
+*Muttaburrasaurus* was a large bipedal ornithopod from Early Cretaceous Australia.  It was probably bulkier than this, and its nose was a little taller, but I wanted to exaggerate the peanut shapes.
+
+![orodromeus](/assets/images/posts/oro.png)
+
+I guess I'm making this a series.  Maybe dieting is finally getting to me psychologically, so even when I think about dinosaurs I'm also thinking about junk food.
+
+By the way, *Orodromeus* was a cat-sized burrowing parksosaurid ornithischian from Late Cretaceous Montana.  Originally I thought I'd make the Oreo pattern into some kind of jaguar-like spots, but it ended up just looking exactly like an Oreo.  Oh well.
+
+![orodromeus-variants](/assets/images/posts/oro-variants.png)
+
+Yep, this is getting out of control.  Speculative evolution + dinosaurs + junk food = ???
+
+![melanorosaurus](/assets/images/posts/melanoro.png)
+
+*Melanorosaurus* was a sauropodomorph (ancestral cousin of the long-necked dinosaurs) from Late Triassic South Africa.  It could reach weights of up to 1.3 tonnes.  It was one of those dinosaurs that thought it was very classy but was actually found everywhere, like at Target.
