--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -71,3 +71,13 @@ Yep, this is getting out of control.  Speculative evolution + dinosaurs + junk f
 ![melanorosaurus](/assets/images/posts/melanoro.png)
 
 *Melanorosaurus* was a sauropodomorph (ancestral cousin of the long-necked dinosaurs) from Late Triassic South Africa.  It could reach weights of up to 1.3 tonnes.  It was one of those dinosaurs that thought it was very classy but was actually found everywhere, like at Target.
+
+![mymoorapelta](/assets/images/posts/mymoorapelta.png)
+
+*Mymoorapelta* was a basal nodosaur from Late Jurassic Colorado.  Ankylosaurs would become the dominant armored herbivores later in the Cretaceous Period, but in the Jurassic they lived in the shadow of the abundant stegosaurs.  This is the first one where the cookie is horizontal relative to the animal.  I think he turned out looking pretty yummy, but not that much like a MoonPie.
+
+Here's some flavor text for the series: *Orodromeus*'s large litter size and short generation time allow it to evolve rapidly, resulting in many variants in the wild, especially leading up to winter when predators are more active as they prepare for hibernation.  Breeders took advantage of these traits to create all kinds of breeds that should never have existed, like "Caramal Apple" and "Most Stuf" (the latter of which are almost always born with horrible deformities).  On the other extreme, *Muttaburrasaurus*'s natural diet consists exclusively of fabaceous plants; it sequesters toxins from these in its dry, flaky skin to deter predators.  This, combined with the difficulties presented by its specialized diet and low reproduction rate, means that it has resisted attempts at domestication despite its tastiness.
+
+![revueltosaurus](/assets/images/posts/revuelto.png)
+
+I drew this for my post next week, so consider this a sneak preview.  It's *Revueltasaurus*, a little herbivorous pseudosuchian from Late Triassic Arizona.  I couldn't find any art of this animal in an evironment rather than just on a plain background, so I created one.  I thought that if it was herbivorous, it should be a little more portly than the way it's often depicted, in order to have room for a long fermenting digestive system.  There's no evidence that it was nocturnal or diurnal, so I just went with nocturnal to shake things up a bit.
