--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -80,4 +80,8 @@ Here's some flavor text for the series: *Orodromeus*'s large litter size and sho
 
 ![revueltosaurus](/assets/images/posts/revuelto.png)
 
-I drew this for my post next week, so consider this a sneak preview.  It's *Revueltasaurus*, a little herbivorous pseudosuchian from Late Triassic Arizona.  I couldn't find any art of this animal in an evironment rather than just on a plain background, so I created one.  I thought that if it was herbivorous, it should be a little more portly than the way it's often depicted, in order to have room for a long fermenting digestive system.  There's no evidence that it was nocturnal or diurnal, so I just went with nocturnal to shake things up a bit.
+It's *Revueltasaurus*, a little herbivorous pseudosuchian from Late Triassic Arizona, which I drew for my [Chinle Biome Profile](https://obscuredinosaurfacts.com/blog/post/2020/12/02/chinle.html).  I couldn't find any art of this animal in an evironment rather than just on a plain background, so I created one.  I thought that if it was herbivorous, it should be a little more portly than the way it's often depicted, in order to have room for a long fermenting digestive system.  There's no evidence that it was nocturnal or diurnal, so I just went with nocturnal to shake things up a bit.
+
+![chilesaurus](/assets/images/posts/chile.png)
+
+It's *Chilesaurus*, the dinosaur of problematic affinity from Late Jurassic Chile.  It had theropod-like shoulders, sauropod-like limbs, ornithischian-like hips, and birdlike hands.  This is another sneak preview of a future profile...stay tuned!
