added tree of life

--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -85,3 +85,7 @@ It's *Revueltasaurus*, a little herbivorous pseudosuchian from Late Triassic Ari
 ![chilesaurus](/assets/images/posts/chile.png)
 
 It's *Chilesaurus*, the dinosaur of problematic affinity from Late Jurassic Chile.  It had theropod-like shoulders, sauropod-like limbs, ornithischian-like hips, and birdlike hands.  This is another sneak preview of a future profile...stay tuned!
+
+{% include image-caption.html imageurl="/assets/images/posts/tree-of-life.png#wide" title="tree of life" caption="A different way of visualizing the tree of life." %}
+
+And now for something completely different: the tree of life!  Except it doesn't really look like a tree in this format, more like a strainer of life.  This way, the definitions of paraphyletic and monophyletic clades are baked into the structure!  Do any relationships here surprise you?
