--- a/_posts/2019-09-03-glossary.markdown
+++ b/_posts/2019-09-03-glossary.markdown
@@ -242,7 +242,7 @@ The **fraternal birth order effect** is the biological effect responsible for ga
 
 **Taphonomy** is everything that happens to an organism after death--scavenging, burial, fossilization, etc.
 
-A **ghost lineage** is a line of descent we know must exist because we have fossil or living evidence for its descendents, but we haven't found any fossil evidence for the ancestors.  The most famous example is the coelacanth, a type of rare lobe-finned fish that is present in the fossil record up to the Cretaceous Period, but then appears to go extinct.  However, living coelacanths still exist; we just haven't found any fossils of them younger than Cretaceous age, making that line of descent a ghost lineage.  Read a more detailed explanation [here](https://ucmp.berkeley.edu/taxa/verts/archosaurs/ghost_lineages.php).
+A **ghost lineage** is a line of descent we know must exist because we have fossil or living evidence for its descendents, but we haven't found any fossil evidence for the ancestors.  Take lizards for example: until recently, the oldest fossil lizards were known from [Middle Jurassic England](https://www.researchgate.net/publication/228117819_Crown-group_lizards_Reptilia_Squamata_from_the_Middle_Jurassic_of_the_British_Isles), but molecular analysis indicates that they split off from their closest relative, the tuatara, at least as far back as the Middle Triassic, making this a ghost lineage.  However, new analysis of a fossil known as *Megachirella*, from the Middle Triassic, revealed that it was in fact an early lizard, closing that gap and fulfilling scientists' predictions nicely.  Read a more detailed explanation of ghost lineages [here](https://ucmp.berkeley.edu/taxa/verts/archosaurs/ghost_lineages.php).
 
 **Endemism** is when an organism is only found in a single time and place; for example, emus are endemic to Australia.
 
