made image smaller

--- a/_posts/2020-11-25-fall-art.md
+++ b/_posts/2020-11-25-fall-art.md
@@ -87,3 +87,7 @@ It's *Chilesaurus*, the dinosaur of problematic affinity from Late Jurassic Chil
 {% include image-caption.html imageurl="/assets/images/posts/tree-of-life.png#wide" title="tree of life" caption="A different way of visualizing the tree of life." %}
 
 And now for something completely different: the tree of life!  Except it doesn't really look like a tree in this format, more like a strainer of life.  This way, the definitions of paraphyletic and monophyletic clades are baked into the structure!  Do any relationships here surprise you?
+
+![mold-pigs](/assets/images/posts/mold-pigs.png)
+
+It's the brand-new tardigrade relative, *Sialomorpha dominicana*, also known as mold pigs!  Hundreds of these microscopic animals that lived during the Paleocene were found in Dominican amber, representing all stages of life.  Some were even caught in the act of eating mold spores, hence the name.
