--- a/_posts/2020-02-19-whales.markdown
+++ b/_posts/2020-02-19-whales.markdown
@@ -82,7 +82,9 @@ Once they’d developed the modern torpedo-shaped body plan, whales quickly dive
 ### Conclusion
 Whales secondarily returned to the oceans very rapidly in the Eocene, traveling through a bunch of familiar semi- and fully-aquatic niches before arriving at the diverse forms we’re familiar with today.  The fact that whales spent time looking like crocodiles, otters, and seals makes me speculate that if whales were to go extinct, would each of those groups become one level more aquatic in order to fill the empty niche?
 
-Another thing to think about is the fact that we live alongside the largest animal ever, the blue whale, which weighs up to 177 tonnes--twice as heavy as the largest sauropods.  Why were whales able to get so big just recently, while no aquatic creature could in the past?  Scientists aren’t sure, but a leading theory is the current lack of giant aquatic predators.  Sperm whales are the largest predators to ever live, but they don’t prey on other vertebrates, instead hunting giant squid in the deepest parts of the ocean; the last living predator a fully-grown whale needed to worry about was *Megalodon*, which went extinct 3.6 million years ago.  This is right around when the truly giant whales appeared.  Maybe being smaller and more nimble was helpful in avoiding super-predators, but once those disappeared, being large was helpful in warding off smaller threats.
+Another thing to think about is the fact that we live alongside the largest animal ever, the blue whale, which weighs up to 177 tonnes--twice as heavy as the largest sauropods.  Why were whales able to get so big just recently, while no aquatic creature could in the past?  There are two factors that coincide with whales' development of huge body sizes 3 or 4 million years ago.  One is the current lack of giant aquatic predators.  Sperm whales are the largest predators to ever live, but they don’t prey on other vertebrates, instead hunting giant squid in the deepest parts of the ocean; the last living predator a fully-grown whale needed to worry about was *Megalodon*, which went extinct 3.6 million years ago.  This is right around when the truly giant whales appeared.  Maybe being smaller and more nimble was helpful in avoiding super-predators, but once those disappeared, being large was helpful in warding off smaller threats.
+
+The second factor is that 3 million years ago was the beginning of the most recent ice age (more technically known as the Quaternary glaciation), which increased the effects of seasonality on many global ecosystems.  More seasonality means that certain food sources become overabundant in some seasons and unavailable in others, including the krill and other densely-schooling marine organisms many mysticetes depend on.  Furthermore, seasonality also creates "blooms" of these creatures in different latitudes at different times of year.  This means a large-bodied whale can (a) better exploit the overabundant food while it has access to it, (b) survive for longer periods without feeding, and (c) travel longer distances between seasonal food sources.  These are all behaviors that we see are key to modern whales' success.
 
 Just for fun, here’s a list of the largest animals in various categories, from biggest to smallest.
 
