--- a/_posts/2021-01-27-bayes.md
+++ b/_posts/2021-01-27-bayes.md
@@ -22,7 +22,9 @@ Despite all the hype, Bayes's Theorem is actually pretty easy to reason about an
 
 ### Example 1: A Tea Party With Bayes
 
-At work, in the before-time, we used have a tea party every Tuesday from 6 to 6:30.  Before my company was bought by a larger company, it was a scotch party, where a bunch of middle-aged men would get together and taste the scotch of the week and try to guess what it was.  But the larger company has a no-alcohol-on-the-premises policy, so it became a tea party.  It's kind of funny to see all these middle-aged men drinking tea and eating cookies and strawberries.  It seems a lot more like an old-woman thing to do.  Anyway, the game is that they'll have some kind of plain tea--white, green, oolong, or black--and you have to guess which it is.  If you're really good, you'll also guess what form (leaves, stems, powdered, etc) and what region (China, India, etc) and if you think it's been served at the tea party in the past.  Anyway, all this to say I realized I was making an un-Bayesian mistake when guessing tea.  Let's simplify it for now and just say there's two kinds of tea, green and white.  And let's say my tasting skill is not that great yet, so I can distinguish between the two with a 60/40 success rate.  So, 60% of green teas I taste will taste green to me, and 40% of green teas I'll misidentify as white.  Same thing with white tea, 60% I'll correctly identify as white, and 40% I'll wrongly guess green.  One week, I tasted a tea, and it tasted white.  So, stupidly, I guessed white.  I was wrong.  This is stupid because I disregarded my priors.  White tea is way more rare than green, and I would estimate that for every white tea we have, we have nine green teas.  So the **prior probability** of tea being white is 10%.  Instead of *shifting* this probability when presented with new data, the 60/40 taste of it, I *replaced* my prior with the new number, and guessed it was 60% likely to be white tea.  However, using Bayes's equation, the true probability is only 14%!  Because there are so few white teas to begin with.  Even if I could taste with 90% accuracy, the probability would only be 50% of being white tea.  Let me explain the math:
+At work, in the before-time, we used have a tea party every Tuesday from 6 to 6:30.  Before my company was bought by a larger company, it was a scotch party, where a bunch of middle-aged men would get together and taste the scotch of the week and try to guess what it was.  But the larger company has a no-alcohol-on-the-premises policy, so it became a tea party.  It's kind of funny to see all these middle-aged men drinking tea and eating cookies and strawberries.  It seems a lot more like an old-woman thing to do.  Anyway, the game is that they'll have some kind of plain tea--white, green, oolong, or black--and you have to guess which it is.  If you're really good, you'll also guess what form (leaves, stems, powdered, etc) and what region (China, India, etc) and if you think it's been served at the tea party in the past.  
+
+All this to say I realized I was making an un-Bayesian mistake when guessing tea.  Let's simplify it for now and just say there's two kinds of tea, green and white.  And let's say my tasting skill is not that great yet, so I can distinguish between the two with a 60/40 success rate.  So, 60% of green teas I taste will taste green to me, and 40% of green teas I'll misidentify as white.  Same thing with white tea: 60% I'll correctly identify as white, and 40% I'll wrongly guess green.  One week, I tasted a tea, and it tasted white.  So, stupidly, I guessed white.  I was wrong.  This is stupid because I disregarded my priors.  White tea is way more rare than green, and I would estimate that for every white tea we have, we have nine green teas.  So the **prior probability** of tea being white is 10%.  Instead of *shifting* this probability when presented with new data, the 60/40 taste of it, I *replaced* my prior with the new number, and guessed it was 60% likely to be white tea.  However, using Bayes's equation, the true probability is only 14%, because there are so few white teas to begin with!  Even if I could taste with 90% accuracy, the probability would only be 50% of being white tea.  Let me explain the math:
 
 - Out of 100 taste tests of tea, we can expect 90 of them to be green and 10 of them to be white.  Easy so far.
 - Out of the 90 green teas, there will be 54 that taste green (60% of 90) and 36 that taste white (40% of 90).
@@ -48,7 +50,7 @@ A presentation of data that shows the same relationships but looks different is 
 
 Here's an example from a few years ago, when I was using Tinder, the speed-online-dating app.  I was scoring each suitor in a spreadsheet on a few different categories, like "Musicality" and "Open-Mindedness" and "Attractiveness."  One time, I went on a date with a boy who got super high marks in all my predetermined categories; he was super smart, went to Harvard for undergrad and Oxford for grad, currently works at Facebook, knew a bit about rationality, had similar musical taste to me, was into climbing, played piano for 12 years, etc.  Basically he was getting 7-9 in every category.  *But* he seemed like he might be gay (and trying to date girls on Tinder because of familial pressure).  Because of that, I added a new category--weirdness/other--and scored him low on it, but he still came out with a higher score than any previous candidate.  So then I decided to do a Bayesian calculation of how likely he was to be gay.
 
-I've written about the fraternal birth order effect before in my post about [strange biological phenomena related to pregnancy](https://obscuredinosaurfacts.com/blog/post/2020/08/12/pregananant.html), but for some reason, the more older brothers a right-handed man has, the more likely he is to be gay.  By a *lot*.  For some strange reason, it doesn't affect women and it doesn't affect left-handed men.  The prior probability of being gay (equivalent to the prevalence in the population) is about 3%.  For every older brother you have, the probability goes up by 1/3.  The equation can be expressed as follows:
+I've written about the fraternal birth order effect before in my post about [strange biological phenomena related to pregnancy](https://obscuredinosaurfacts.com/blog/post/2020/08/12/pregananant.html).  For some reason, the more older brothers a right-handed man has, the more likely he is to be gay.  By a *lot*.  For some strange reason, it doesn't affect women and it doesn't affect left-handed men.  The prior probability of being gay (equivalent to the prevalence in the population) is about 3%.  For every older brother you have, the probability goes up by 1/3.  The equation can be expressed as follows:
 
 $$P_{gay}=1-\left(\frac{97}{100}\left(\frac{2}{3}\right)^n\right)$$
 
@@ -76,9 +78,9 @@ Again, we can represent the data isomorphically in a table:
 
 Being able to draw up a table becomes important when reasoning about more than two variables, as we'll see in the next section.
 
-Note: you probably have noticed that half of my Bayesian calculation each time comes from making up a number: my tea tasting accuracy of 60/40 and my gay-dar accuracy of 70/30. The point of doing a Bayesian calculation is that it makes you consider your priors and make a real statistical calculation, but once you get the result, you can throw out the answer and go with your gut. But by doing this, your gut is much better informed.
+Note: you probably have noticed that half of my Bayesian calculation each time comes from making up a number: my tea tasting accuracy of 60/40 and my gay-dar accuracy of 70/30. The point of doing a Bayesian calculation is that it makes you consider your priors and make a real statistical calculation, but once you get the result, you can make the choice to throw out the answer and go with your gut. But by doing this, your gut is much better informed.
 
-Another interesting place the fraternal birth order thing comes into play is in the movie Frozen, where Prince Hans says that he has twelve older brothers. If you've seen the movie, you know that he courts Anna just so he can gain control of her kingdom, so his sexuality isn't really revealed by the story. Using the fraternal birth order calculation, we find that he has a 99.3% chance of being gay. [Watsonianally](https://tvtropes.org/pmwiki/pmwiki.php/Main/WatsonianVersusDoylist), if Anna had known about the fraternal birth order effect, she could have saved herself a lot of trouble.  [Doylistically](https://tvtropes.org/pmwiki/pmwiki.php/Main/WatsonianVersusDoylist), I wonder if Disney's writers knew about the fraternal birth order effect and intentionally invoked it when creating Hans's backstory, appearance, and mannerisms.
+Another interesting place the fraternal birth order thing comes into play is in the movie Frozen, in which Prince Hans says that he has twelve older brothers. If you've seen the movie, you know that he courts Anna just so he can gain control of her kingdom, so his sexuality isn't really revealed by the story. Using the fraternal birth order calculation, we find that he has a 99.3% chance of being gay. [Watsonianally](https://tvtropes.org/pmwiki/pmwiki.php/Main/WatsonianVersusDoylist), if Anna had known about the fraternal birth order effect, she could have saved herself a lot of trouble.  [Doylistically](https://tvtropes.org/pmwiki/pmwiki.php/Main/WatsonianVersusDoylist), I wonder if Disney's writers knew about the fraternal birth order effect and intentionally invoked it when creating Hans's backstory, appearance, and mannerisms.
 
 ### Example 3: Bayes In The Time Of COVID
 
@@ -92,7 +94,7 @@ Thankfully, that didn't happen: he tested negative twice (once maybe a bit early
 
 If you're confident in your Bayes chops by now, feel free to just examine the graphic and skip this part.  However, I'll explain the process step by step here.
 
-First, I define my variables.  The ones with apostrophes are read "not-X" and are defined as 1-X.  Straightforward so far.
+First, I define my variables.  The ones with apostrophes are read "not-X" and are defined as one minus X.  Straightforward so far.
 
 Then, I state my priors and assumptions:
 - My prior probability that I had COVID, before taking the test, was 10%--stated another way, I was 90% sure I did not have it.  This is just my hand-wavey estimate.
